--- a/pipelines/02-tools.yml
+++ b/pipelines/02-tools.yml
@@ -1,6 +1,3 @@
-# Pipeline 2: Tools
-# Deploys: NGINX Ingress, ArgoCD, SonarQube
-
 trigger:
   paths:
     include:
@@ -39,7 +36,10 @@ steps:
       provider: 'aws'
       command: 'init'
       workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/tools'
-      environmentServiceNameAWS: 'aws-service-connection'
+      backendServiceAWS: 'aws-terraform-connection'
+      backendAWSBucketName: 'backend-s3-final-project'
+      backendAWSKey: 'tools/terraform.tfstate'
+      backendAWSRegion: 'us-east-1'
 
   - task: TerraformTaskV4@4
     displayName: 'Terraform Validate'
@@ -47,6 +47,7 @@ steps:
       provider: 'aws'
       command: 'validate'
       workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/tools'
+      environmentServiceNameAWS: 'aws-terraform-connection'
 
   - ${{ if eq(parameters.action, 'destroy') }}:
     - script: |
@@ -65,4 +66,4 @@ steps:
       command: '${{ parameters.action }}'
       workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/tools'
       commandOptions: '-auto-approve -var="vault_address=$(vault-address)" -var="vault_token=$(vault-token)" -var="nexus_url=$(nexus-url)" -var="git_repo_url=$(git-repo-url)"'
-      environmentServiceNameAWS: 'aws-service-connection'
+      environmentServiceNameAWS: 'aws-terraform-connection'
