--- a/pipelines/02-tools.yml
+++ b/pipelines/02-tools.yml
@@ -29,7 +29,7 @@ steps:
   - task: AWSCLI@1
     displayName: "Update kubeconfig"
     inputs:
-      awsCredentials: "aws-terraform-connection"
+      awsCredentials: "aws-service-connection"
       regionName: "us-east-1"
       script: |
         aws eks update-kubeconfig --name devops-cluster --region $(AWS_REGION)
