--- a/pipelines/02-tools.yml
+++ b/pipelines/02-tools.yml
@@ -35,43 +35,43 @@ stages:
         displayName: "Deploy Tools"
         timeoutInMinutes: 90
         steps:
-          # Step 0: Clean up existing IAM resources (if any)
-          - script: |
-              echo "Cleaning up existing IAM resources..."
-              ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-              POLICY_ARN="arn:aws:iam::${ACCOUNT_ID}:policy/devops-final-lb-controller"
-              ROLE_NAME="devops-final-lb-controller"
-
-              echo "Account ID: ${ACCOUNT_ID}"
-              echo "Policy ARN: ${POLICY_ARN}"
-              echo "Role Name: ${ROLE_NAME}"
-
-              # List attached policies and detach them
-              ATTACHED_POLICIES=$(aws iam list-attached-role-policies --role-name ${ROLE_NAME} --query 'AttachedPolicies[*].PolicyArn' --output text 2>/dev/null || true)
-              for POLICY in $ATTACHED_POLICIES; do
-                echo "Detaching policy: $POLICY"
-                aws iam detach-role-policy --role-name ${ROLE_NAME} --policy-arn ${POLICY} || true
-              done
-
-              # Delete role
-              echo "Deleting role: ${ROLE_NAME}"
-              aws iam delete-role --role-name ${ROLE_NAME} 2>/dev/null || echo "Role not found or already deleted"
-
-              # Delete policy versions (except default)
-              VERSIONS=$(aws iam list-policy-versions --policy-arn ${POLICY_ARN} --query 'Versions[*].VersionId' --output text 2>/dev/null || true)
-              for VERSION in $VERSIONS; do
-                if [ "$VERSION" != "v1" ]; then
-                  echo "Deleting policy version: $VERSION"
-                  aws iam delete-policy-version --policy-arn ${POLICY_ARN} --version-id ${VERSION} || true
-                fi
-              done
-
-              # Delete policy
-              echo "Deleting policy: ${POLICY_ARN}"
-              aws iam delete-policy --policy-arn ${POLICY_ARN} 2>/dev/null || echo "Policy not found or already deleted"
-
-              echo "Cleanup complete!"
+          # Step 0: Install AWS CLI and cleanup existing IAM resources
+          - task: AwsCli@1
             displayName: "Cleanup IAM Resources"
+            inputs:
+              awsCredentials: "aws-terraform-connection"
+              regionName: "us-east-1"
+              scriptType: "bash"
+              scriptInline: |
+                echo "Cleaning up existing IAM resources..."
+                ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+                POLICY_ARN="arn:aws:iam::${ACCOUNT_ID}:policy/devops-final-lb-controller"
+                ROLE_NAME="devops-final-lb-controller"
+
+                echo "Account ID: ${ACCOUNT_ID}"
+                echo "Policy ARN: ${POLICY_ARN}"
+                echo "Role Name: ${ROLE_NAME}"
+
+                # List and detach all policies from role
+                echo "Listing attached policies..."
+                aws iam list-attached-role-policies --role-name ${ROLE_NAME} 2>/dev/null || echo "Role not found"
+
+                # Detach the specific policy
+                echo "Detaching policy from role..."
+                aws iam detach-role-policy --role-name ${ROLE_NAME} --policy-arn ${POLICY_ARN} 2>/dev/null || echo "Policy not attached or already detached"
+
+                # Wait a moment for detachment to complete
+                sleep 5
+
+                # Delete role
+                echo "Deleting role: ${ROLE_NAME}"
+                aws iam delete-role --role-name ${ROLE_NAME} 2>/dev/null || echo "Role not found or already deleted"
+
+                # Delete policy
+                echo "Deleting policy: ${POLICY_ARN}"
+                aws iam delete-policy --policy-arn ${POLICY_ARN} 2>/dev/null || echo "Policy not found or already deleted"
+
+                echo "Cleanup complete!"
 
           # Step 1: Install Terraform
           - task: TerraformInstaller@1
@@ -136,7 +136,7 @@ stages:
               workingDirectory: "$(System.DefaultWorkingDirectory)/terraform/tools"
               environmentServiceNameAWS: "aws-terraform-connection"
 
-          # Step 7: Check SonarQube pod status (informational)
+          # Step 7: Check pod status
           - script: |
               echo "Checking SonarQube pod status..."
               kubectl get pods -n tooling || true
