--- a/pipelines/02-tools.yml
+++ b/pipelines/02-tools.yml
@@ -1,5 +1,7 @@
+# =============================================================================
 # Tools Pipeline - Deploys NGINX, ArgoCD, SonarQube
-# Terraform handles all tool installations
+# Terraform handles all tool installations with proper IRSA configuration
+# =============================================================================
 
 trigger:
   branches:
@@ -33,15 +35,34 @@ stages:
     jobs:
       - job: DeployTools
         displayName: "Deploy Tools"
-        timeoutInMinutes: 90
+        timeoutInMinutes: 120
         steps:
-          # Step 1: Install Terraform
+          # Step 1: Install required tools
+          - script: |
+              echo "Installing kubectl..."
+              curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+              chmod +x kubectl
+              sudo mv kubectl /usr/local/bin/
+              kubectl version --client
+            displayName: "Install kubectl"
+
+          # Step 2: Install Terraform
           - task: TerraformInstaller@1
             displayName: "Install Terraform"
             inputs:
               terraformVersion: "1.5.7"
 
-          # Step 2: Initialize Terraform with S3 Backend
+          # Step 3: Configure kubectl access to EKS
+          - script: |
+              echo "Configuring kubectl access to EKS cluster..."
+              aws eks update-kubeconfig --name devops-cluster --region us-east-1
+              kubectl cluster-info
+            displayName: "Configure kubectl for EKS"
+            env:
+              AWS_ACCESS_KEY_ID: $(aws-access-key-id)
+              AWS_SECRET_ACCESS_KEY: $(aws-secret-access-key)
+
+          # Step 4: Initialize Terraform with S3 Backend
           - task: TerraformTaskV4@4
             displayName: "Terraform Init"
             inputs:
@@ -53,7 +74,7 @@ stages:
               backendAWSKey: "tools/terraform.tfstate"
               backendAWSRegion: "us-east-1"
 
-          # Step 3: Terraform Validate
+          # Step 5: Terraform Validate
           - task: TerraformTaskV4@4
             displayName: "Terraform Validate"
             inputs:
@@ -61,7 +82,7 @@ stages:
               command: "validate"
               workingDirectory: "$(System.DefaultWorkingDirectory)/terraform/tools"
 
-          # Step 4: Terraform Plan
+          # Step 6: Terraform Plan
           - task: TerraformTaskV4@4
             displayName: "Terraform Plan"
             inputs:
@@ -78,7 +99,7 @@ stages:
                 -out=tfplan
               environmentServiceNameAWS: "aws-terraform-connection"
 
-          # Step 5: Terraform Apply
+          # Step 7: Terraform Apply
           - task: TerraformTaskV4@4
             displayName: "Terraform Apply"
             inputs:
@@ -88,7 +109,37 @@ stages:
               commandOptions: "tfplan"
               environmentServiceNameAWS: "aws-terraform-connection"
 
-          # Step 6: Terraform Output
+          # Step 8: Verify LB Controller Service Account
+          - script: |
+              echo "Verifying AWS Load Balancer Controller service account annotation..."
+              kubectl get serviceaccount aws-load-balancer-controller -n kube-system -o yaml
+              echo ""
+              echo "Checking for IAM role annotation..."
+              kubectl get serviceaccount aws-load-balancer-controller -n kube-system -o jsonpath='{.metadata.annotations.eks\.amazonaws\.com/role-arn}'
+              echo ""
+            displayName: "Verify LB Controller SA"
+            condition: always()
+
+          # Step 9: Check pod status
+          - script: |
+              echo "=== Checking AWS Load Balancer Controller ==="
+              kubectl get pods -n kube-system -l app.kubernetes.io/name=aws-load-balancer-controller || true
+              echo ""
+              echo "=== Checking NGINX Ingress ==="
+              kubectl get pods -n ingress-nginx || true
+              echo ""
+              echo "=== Checking ArgoCD ==="
+              kubectl get pods -n argocd || true
+              echo ""
+              echo "=== Checking SonarQube ==="
+              kubectl get pods -n tooling || true
+              echo ""
+              echo "=== All Namespaces ==="
+              kubectl get pods -A || true
+            displayName: "Check Pod Status"
+            condition: always()
+
+          # Step 10: Terraform Output
           - task: TerraformTaskV4@4
             displayName: "Terraform Output"
             inputs:
@@ -97,13 +148,3 @@ stages:
               customCommand: "output"
               workingDirectory: "$(System.DefaultWorkingDirectory)/terraform/tools"
               environmentServiceNameAWS: "aws-terraform-connection"
-
-          # Step 7: Check pod status
-          - script: |
-              echo "Checking SonarQube pod status..."
-              kubectl get pods -n tooling || true
-              echo ""
-              echo "Checking all namespaces..."
-              kubectl get pods -A || true
-            displayName: "Check Pod Status"
-            condition: always()
