--- a/pipelines/02-tools.yml
+++ b/pipelines/02-tools.yml
@@ -28,8 +28,6 @@ variables:
     value: "http://18.215.161.128:8081"
   - name: GIT_REPO_URL
     value: "https://github.com/ahmedekramalsada/final-project-devops.git"
-  - name: AWS_REGION
-    value: "us-east-1"
 
 stages:
   - stage: DeployTools
@@ -66,7 +64,27 @@ stages:
               backendAWSKey: "tools/terraform.tfstate"
               backendAWSRegion: "us-east-1"
 
-          # Step 4: Terraform Validate
+          # Step 4: Import existing resources if they exist (prevents "already exists" errors)
+          - script: |
+              # Configure kubectl for import operations
+              aws eks update-kubeconfig --name devops-cluster --region us-east-1
+              
+              cd "$(System.DefaultWorkingDirectory)/terraform/tools"
+              
+              # Try to import the service account if it exists
+              if kubectl get serviceaccount aws-load-balancer-controller -n kube-system >/dev/null 2>&1; then
+                echo "Service account exists, importing to Terraform state..."
+                terraform import kubernetes_service_account.lb_controller kube-system/aws-load-balancer-controller || echo "Import may already exist, continuing..."
+              else
+                echo "Service account does not exist, will be created by Terraform"
+              fi
+            displayName: "Import Existing Resources"
+            env:
+              AWS_ACCESS_KEY_ID: $(aws-access-key-id)
+              AWS_SECRET_ACCESS_KEY: $(aws-secret-access-key)
+              AWS_DEFAULT_REGION: "us-east-1"
+
+          # Step 5: Terraform Validate
           - task: TerraformTaskV4@4
             displayName: "Terraform Validate"
             inputs:
@@ -74,7 +92,7 @@ stages:
               command: "validate"
               workingDirectory: "$(System.DefaultWorkingDirectory)/terraform/tools"
 
-          # Step 5: Terraform Plan
+          # Step 6: Terraform Plan
           - task: TerraformTaskV4@4
             displayName: "Terraform Plan"
             inputs:
@@ -91,7 +109,7 @@ stages:
                 -out=tfplan
               environmentServiceNameAWS: "aws-terraform-connection"
 
-          # Step 6: Terraform Apply
+          # Step 7: Terraform Apply
           - task: TerraformTaskV4@4
             displayName: "Terraform Apply"
             inputs:
@@ -101,8 +119,7 @@ stages:
               commandOptions: "tfplan"
               environmentServiceNameAWS: "aws-terraform-connection"
 
-          # Step 7: Configure kubectl and verify deployment
-          # Uses AWS credentials from the service connection via env vars
+          # Step 8: Verify deployment
           - script: |
               echo "Configuring kubectl access to EKS cluster..."
               aws eks update-kubeconfig --name devops-cluster --region us-east-1
@@ -114,28 +131,17 @@ stages:
               kubectl get pods -n kube-system -l app.kubernetes.io/name=aws-load-balancer-controller || echo "LB Controller pods not yet ready"
               echo ""
               echo "=== Checking Service Account Annotation ==="
-              kubectl get serviceaccount aws-load-balancer-controller -n kube-system -o jsonpath='{.metadata.annotations.eks\.amazonaws\.com/role-arn}' || echo "SA not found"
-              echo ""
-            displayName: "Configure kubectl and Verify"
+              kubectl get serviceaccount aws-load-balancer-controller -n kube-system -o jsonpath='{.metadata.annotations.eks\.amazonaws\.com/role-arn}' && echo "" || echo "SA not found"
+            displayName: "Verify Deployment"
             env:
               AWS_ACCESS_KEY_ID: $(aws-access-key-id)
               AWS_SECRET_ACCESS_KEY: $(aws-secret-access-key)
               AWS_DEFAULT_REGION: "us-east-1"
-            condition: succeededOrFailed()
 
-          # Step 8: Check all pod status
+          # Step 9: Check all pod status
           - script: |
               echo "=== All Pods Status ==="
               kubectl get pods -A || true
-              echo ""
-              echo "=== NGINX Ingress ==="
-              kubectl get pods -n ingress-nginx || true
-              echo ""
-              echo "=== ArgoCD ==="
-              kubectl get pods -n argocd || true
-              echo ""
-              echo "=== SonarQube ==="
-              kubectl get pods -n tooling || true
             displayName: "Check Pod Status"
             env:
               AWS_ACCESS_KEY_ID: $(aws-access-key-id)
@@ -143,7 +149,7 @@ stages:
               AWS_DEFAULT_REGION: "us-east-1"
             condition: always()
 
-          # Step 9: Terraform Output
+          # Step 10: Terraform Output
           - task: TerraformTaskV4@4
             displayName: "Terraform Output"
             inputs:
